css/style.css
a {
    display: block;
    text-decoration: none;
}

p {
    font-family: Roboto;
}

.header {
    font-size: 2em;
    font-weight: bold;
}

.menu {
    height: 2em;
    width: 16em;
    text-decoration:none;
    padding: 1em 1em 1em 1em;
    background-color: antiquewhite;
    box-shadow: 0 0.5em 1em 0 lightgray;
    transition: 0.25s;
}

.menu:hover {
    box-shadow: 0 1em 2em 0 lightgray;
}

.options {
    font-size: 1.25em;
    font-weight: bold;
    color: darkslategray;
    display: table-cell;
}

.card {
    height: 4em;
    width: 16em;
    background-color: ghostwhite;
    box-shadow: 0 0.5em 1em 0 lightgray;
    transition: 0.5s;
}

.card:hover {
    box-shadow: 0 1em 2em 0 lightgray;
}

.github {
    position: absolute;
    bottom: 0;
    right: 0;
}

.settings {
    margin-left: 10em;
    margin-right: 10em;
    background-color: ghostwhite;
}

.nav {
    float: left;
    padding-right: 5em;
    height: 100%;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    width: 15em;
    background-color: #f1f1f1;
}

li a {
    display: block;
    color: #000;
    padding: 8px 16px;
    text-decoration: none;
    border-bottom: 0.0625em solid royalblue;
    transition: 0.25s;
}

li a.active {
    background-color: royalblue;
    color: white;
}

li a:hover:not(.active) {
    background-color: lightsteelblue;
    color: white;
}

.item {
    font-size: 1.25em;
    font-weight: bold;
    font-style: oblique;
}

